Use `.getFirst()` (by OpenRewrite)